Login correcto OK, password codificado a md5() a la base, falta configurar seguridad en cada accion de cada modulo. Ente->Direcciones OK, Ente->Estatuto OK, haciendo Ente->EjercicioEconomico.

--- a/apps/frontend/config/settings.yml
+++ b/apps/frontend/config/settings.yml
@@ -44,8 +44,8 @@ all:
     i18n:                   true
     
     # Uncomment if you will use sfGuardPlugin
-    #login_module:           sfGuardAuth
-    #login_action:           signin
+    login_module:           principal
+    login_action:           index
 
     #secure_module:          sfGuardAuth
     #secure_action:          secure
