Funcionando la exportacion a formato PDF (para probar ejecutar sfTCPDF/test)  y el dato de la localidad  correspondiente a cada entidad (solo si la direccion es real).

--- a/apps/frontend/config/settings.yml
+++ b/apps/frontend/config/settings.yml
@@ -26,6 +26,7 @@ test:
 
 all:
   .settings:
+    enabled_modules:      [default,sfTCPDF]
     # Form security secret (CSRF protection)
     csrf_secret:            whisky_tango_foxtrot
 
