--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -14,3 +14,7 @@ default_index:
 
 default:
   url:   /:module/:action/*
+
+#sfTCPDF:
+#  url:   /sfTCPDF/:action
+#  param: { module: sfTCPDF, action: test } 
