--- a/apps/frontend/modules/localidad/config/security.yml
+++ b/apps/frontend/modules/localidad/config/security.yml
@@ -1,11 +1,15 @@
 index:
   is_secure:  on
-  credentials: [[ 1 ]]
+  credentials: [[ 1, 2 ]]
 
 edit:
   is_secure:  on
-  credentials: [[ 1 ]]
+  credentials: [[ 1, 2 ]]
 
 new:
   is_secure:  on
-  credentials: [[ 1 ]]
+  credentials: [[ 1, 2 ]]
+
+delete:
+  is_secure: on
+  credentials: [[ 1, 2 ]]
