--- a/apps/frontend/config/factories.yml
+++ b/apps/frontend/config/factories.yml
@@ -35,7 +35,7 @@ dev:
   mailer:
     param:
       delivery_strategy: single_address
-      delivery_address: jgosaine@gmail.com
+      delivery_address: sayesch@gmail.com
 
 all:
   routing:
