--- a/apps/frontend/config/factories.yml
+++ b/apps/frontend/config/factories.yml
@@ -34,8 +34,7 @@ test:
 dev:
   mailer:
     param:
-      delivery_strategy: single_address
-      delivery_address: sayesch@gmail.com
+      delivery_strategy: realtime
 
 all:
   routing:
